<resources>
    <string name="app_name">Screen Service TV App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activation_title_txt">Sign in to your manager dashboard</string>
    <string name="activation_subtitle_txt">This screen will refresh when completed.</string>
    <string name="activation_step_one_txt">STEP 1</string>
    <string name="activation_step_one_desc_txt">Sign in to your manager dashboard</string>
    <string name="activation_step_one_url_txt">manager.screenservice.io/code-auth</string>
    <string name="activation_step_two_txt">STEP 2</string>
    <string name="activation_step_two_desc_txt">Enter activation code when prompted</string>
    <string name="activation_step_two_code_txt">____-____-____</string>
    <string name="language_english">Language: English</string>
    <string name="service_unavailable_message">Your device may not be connected to the internet. Please make sure your connection is working. Retrying in 30 seconds.</string>
    <string name="onscreen_sync">onScreen Sync</string>
</resources>